@@ -37,7 +37,7 @@ function template_main()
 		<form action="', $scripturl, '?action=emailuser;sa=sendtopic;topic=', $context['current_topic'], '.', $context['start'], '" method="post" accept-charset="', $context['character_set'], '">
 			<div class="cat_bar">
 				<h3>
-					<span class="ie6_header floatleft"><img src="', $settings['images_url'], '/email_sm.gif" alt="" />', $context['page_title'], '</span>
+					<span class="ie6_header floatleft"><img src="', $settings['images_url'], '/email_sm.gif" alt="" class="icon" />', $context['page_title'], '</span>
 				</h3>
 			</div>
 			<div class="windowbg2 wrc">
@@ -101,7 +101,7 @@ function template_custom_email()
 		<form action="', $scripturl, '?action=emailuser;sa=email" method="post" accept-charset="', $context['character_set'], '">
 			<div class="cat_bar">
 				<h3>
-					<span class="ie6_header floatleft"><img src="', $settings['images_url'], '/email_sm.gif" alt="" />', $context['page_title'], '</span>
+					<span class="ie6_header floatleft"><img src="', $settings['images_url'], '/email_sm.gif" alt="" class="icon" />', $context['page_title'], '</span>
 				</h3>
 			</div>
 			<div class="windowbg wrc">
